--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,10 @@
-.hero-section{
+.hero-section {
     background-color: aquamarine;
     background-size: cover;
     height: 100vh;
 }
 
-.navbar-collapse{
+.navbar-collapse {
     background: #f49e38;
     position: absolute;
     top: 0;
@@ -19,28 +19,60 @@
     max-height: 0;
     overflow: hidden;
 }
+
 .navbar-collapse.show {
     max-height: 1000px;
 }
-.navbar-toggler, .navbar-brand{
+
+.navbar-toggler,
+.navbar-brand {
     z-index: 1;
 }
-.navbar-toggler:focus{
+
+.navbar-toggler:focus {
     box-shadow: none;
 }
-.navbar-brand{
+
+.navbar-brand {
     font-size: 1.8em;
     letter-spacing: 2px;
 }
-.navbar-collapse .nav-link{
+
+.navbar-collapse .nav-link {
     font-size: 1.5em;
     letter-spacing: 2px;
 }
-.navbar-toggler-icon:nth-child(1) {
-    top: 0px;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-  }
+.navbar-toggler{
+    margin-right: 20px;
+    cursor:pointer;
+}
+.navbar-toggler span {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #ffffff;
+    transition: all 0.3s ease;
+}
 
+.navbar-toggler .icon {
+    display: none;
+}
+
+.navbar-toggler.open .icon {
+    display: block;
+}
+
+.navbar-toggler.open span:nth-child(1) {
+    transform: rotate(45deg) translate(4px, 4px);
+}
+
+.navbar-toggler.open span:nth-child(2) {
+    opacity: 0;
+}
+
+.navbar-toggler.open span:nth-child(3) {
+    transform: rotate(-45deg) translate(7px, -7px);
+}
